# Nested-Learning

./: NestedLearning.txt  README.md  debug_internals.py  pyproject.toml
.github/workflows/: publish.yml
examples/: continual_digits.py
nested_learning/: __init__.py  hope.py  memory.py  nn.py  optim.py  tensor.py  torch_optim.py
nested_learning/kernels/: __init__.py  cpu.py  gpu.py
src/nestedlearning/: __init__.py  core.py  kernels.py  memory.py  models.py  optimizers.py  tensor.py  triton_kernels.py
