[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestedlearning"
version = "0.0.1"
description = "Nested Learning: skeleton library for nested optimization, self-modification, and continuum memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nested Learning Contributors" }]
keywords = ["nested-learning", "continual-learning", "self-modifying", "optimization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Homepage = "https://example.com/nestedlearning"
Repository = "https://example.com/nestedlearning"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
